# AdAM

./: .cursorrules  .env.example  .gitignore  ADAM v2.excalidraw  AdAM.code-workspace  AdAM.excalidraw  CHATPROMPTTEMPLATE.MD  LANGCHAIN_PYDANTIC.MD  LICENSE  README.md  WITH_STRUCTURED_OUTPUT.MD  conversations.db  pyproject.toml  requirements_env1.txt
Prompts/: AdAM - Conceptual Overview.MD  Creating Meta Agents.MD  Python Documentation Standard.MD  TypeScript Documentation Standard.xml
adam/: breakpoint_test.py  build_graph.py  connection_manager.py  constructor_graph.py  conversations.db  database redis.py  database.py  db_session.py  deadlock_example.py  main.py  meta_graph copy.py  meta_graph.py  run_construct.py  run_meta_graph.py  server.py  state.py  states.py  stream_results.py  trial_meta_graph.py
adam/agents/: agent_builder.py  analyser.py  artist.py  blueprinter.py  conversations.db  engineer.py  meta_agent_helper.py  meta_one.py  meta_search.py  meta_supervisor.py  meta_supervisor_old.py  meta_two.py  namer.py  planner.py  questioner.py  searcher.py  subject_agent.py  subject_node_test.py
adam/edges/: analyser_edge.py  builder_edge.py  human_edge.py  supervisor_edge.py
adam/nodes/: analyser_node.py  artist_node.py  blueprinter_node.py  builder_node.py  builder_node_old.py  engineer_node.py  human_node.py  meta_graph_node.py  meta_human_node.py  meta_node_helper.py  meta_node_one.py  meta_node_search.py  meta_node_supervisor.py  meta_node_two.py  namer_node.py  subject_node.py
adam/tools/: human_web_input.py  save_image_from_url.py
adam/utilities/: sanitize_name.py  wipe_db.py
tests/: server_test.py
web-client/: package-lock.json  package.json  tailwind.config.ts
web-client/src/components/: ChatWindow.tsx  ConversationList.tsx  Layout.tsx  MessageInput.tsx  MessageList.tsx  MetaAgentsContext.tsx  SecondaryWindow.tsx  SecondaryWindowContext.tsx  SelectedConversationContext.tsx  useMessages.tsx
web-client/src/pages/: _app.tsx  index.tsx
web-client/src/styles/: globals.css
