[tool.poetry]
name = "adam"
version = "0.1.0"
description = ""
authors = ["Shannon Gray <shanngray@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.1"
python-dotenv = "^1.0.1"
langgraph = "^0.0.62"
langchain-experimental = "^0.0.59"
langchain-cohere = "^0.1.5"
langchain-core = "^0.2.3"
langchain-text-splitters = "^0.2.0"
langchain-groq = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
