[tool.poetry]
name = "adam"
version = "0.1.0"
description = ""
authors = ["Shannon Gray <shanngray@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.0"
python-dotenv = "^1.0.1"
langgraph = "^0.2.22"
langchain-experimental = "^0.3.0"
langchain-cohere = "^0.3.0"
langchain-core = "^0.3.2"
langchain-text-splitters = "^0.3.0"
langchain-groq = "^0.2.0"
fastapi = "^0.112.2"
sse-starlette = "^2.1.3"
asyncio = "^3.4.3"
httpx = "^0.27.2"
aiosqlite = "^0.20.0"
icecream = "^2.1.3"
greenlet = "^3.0.3"
websockets = "^13.0.1"
wsproto = "^1.2.0"
langchain-community = "^0.3.0"
langchain-openai = "^0.2.1"
openai = "^1.50.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
